fix: http server preserve counter
